--- a/standalone-frontend/index.html
+++ b/standalone-frontend/index.html
@@ -116,7 +116,7 @@ function Login({ onLogin }) {
                     <div className="w-16 h-16 bg-primary rounded-full flex items-center justify-center mx-auto mb-4">
                         <i className="fas fa-church text-white text-2xl"></i>
                     </div>
-                    <h1 className="text-2xl font-bold text-gray-800">Grace Evangelical Ministries</h1>
+                    <h1 className="text-2xl font-bold text-gray-800">Dependify Gospel Centre</h1>
                     <p className="text-gray-500">Evangelism CRM - Demo</p>
                 </div>
                 {error && (
@@ -169,7 +169,7 @@ function Sidebar({ activeTab, setActiveTab, user }) {
                         <i className="fas fa-church text-white"></i>
                     </div>
                     <div>
-                        <h2 className="font-bold text-gray-800">Grace Evangelical</h2>
+                        <h2 className="font-bold text-gray-800">Dependify Gospel</h2>
                         <p className="text-xs text-gray-500">Evangelism CRM</p>
                     </div>
                 </div>
