--- a/standalone-frontend/index.html
+++ b/standalone-frontend/index.html
@@ -52,7 +52,7 @@
     <script type="text/babel">
 const { useState, useEffect } = React;
 
-const API_URL = 'http://localhost:8000/api';
+const API_URL = '/api';
 
 const api = {
     async request(endpoint, options = {}) {
